[Wayland] [CSD] When restoring minimized window the tabs stop to redraw
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
People
(Reporter: jhorak, Assigned: jhorak)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Also after window restore from minimized state the window state is kept as minimized, subsequent minimize button does not work.
This is because the GTK does not send the GDK_WINDOW_STATE_ICONIFIED state to the window_state_event_cb during iconify (under Wayland only).
Upstream bug: https://gitlab.gnome.org/GNOME/gtk/issues/67
| Assignee | ||
Comment 1•6 years ago
|
||
Under Wayland the GTK does not send the correct window state event change
when the window is iconified. We need to add a workaround for that to avoid
unresponsive UI after restoring the window.
| Assignee | ||
Updated•6 years ago
|
Pushed by nbeleuzu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4784b03e2ffd
Workaround for restoring minimized window in Wayland; r=stransky
Comment 3•6 years ago
|
||
| bugherder | ||
Comment 5•6 years ago
|
||
Comment on attachment 9084033 [details]
Bug 1572455 Workaround for restoring minimized window in Wayland; r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: Restored window on Firefox/Wayland is not visible.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Linux/Wayland only fix.
- String changes made/needed: none
Comment 6•6 years ago
|
||
Comment on attachment 9084033 [details]
Bug 1572455 Workaround for restoring minimized window in Wayland; r=stransky
Fixes a bug with Wayland on Linux. Approved for 69.0b16.
Comment 7•6 years ago
|
||
| bugherder uplift | ||
Description
•