Bug 1572455 Workaround for restoring minimized window in Wayland; r=stransky

Under Wayland the GTK does not send the correct window state event change
when the window is iconified. We need to add a workaround for that to avoid
unresponsive UI after restoring the window.

Differential Revision: https://phabricator.services.mozilla.com/D41219